...
    <string name="runtime_likes">点赞</string>
    <string name="runtime_coins">投币</string>
    <string name="runtime_favorites">收藏</string>
    <string name="runtime_shares">分享</string>
    <string name="runtime_submitted_at">投稿/过审时间</string>
    <string name="runtime_time_uncertain">可能不准确</string>
    <string name="runtime_content_id">内容编号</string>
    <string name="runtime_bv_id">BV 号</string>
    <string name="runtime_ep_id">ep 号</string>
    <string name="runtime_ss_id">ss 号</string>
    <string name="runtime_au_id">au 号</string>
    <string name="runtime_cv_id">cv 号</string>
    <string name="runtime_am_id">am 号</string>
...
