...
    <string name="parse_metadata_view_details">查看详细信息</string>
    <string name="parse_metadata_copy_identifier">复制 %1$s</string>
    <string name="parse_metadata_identifier_clip_label" translatable="false">BiliTools %1$s</string>
    <string name="parse_metadata_identifier_copied">已复制 %1$s</string>
    <string name="parse_metadata_details_title">详细信息</string>
    <string name="parse_metadata_copy_value">复制此项</string>
    <string name="parse_metadata_part_preview_desc">分 P 预览图</string>
    <string name="parse_metadata_copy_part_preview_url">复制预览图链接</string>
    <string name="parse_metadata_value_clip_label">BiliTools 详细信息</string>
    <string name="parse_metadata_value_copied">内容已复制到剪贴板</string>
    <string name="parse_section_options">下载与导出</string>
    <string name="parse_page_label">选择分P</string>
    <string name="parse_media_type_label">解析类型</string>
...
